<resources>
    <string name="app_name">Cornhol.io</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="debug">Debug</string>
    <string name="discover">Discover</string>
    <string name="pair">Pair</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General preferences -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example preferences for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example preferences for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="search">Search</string>
    <string name="previous">Previously Paired</string>
    <string name="discovered">Discovered</string>
    <string name="deny">Deny</string>
    <string name="grant">Grant</string>
    <string name="permissions">Permissions</string>
    <string name="btDisabledMsg">Bluetooth is disabled on this device</string>
    <string name="locPermMsg">This app needs your location to pair with boards over Bluetooth. An alternative is to pair using the Android Bluetooth menu in your settings.</string>
    <string name="locDeniedMsg">Permission denied to use your location</string>
    <string name="board">Board</string>
    <string name="none">None</string>
    <string name="clear">Clear</string>
    <string name="nextRound">Next Round</string>
    <string name="endGame">End Game</string>
    <string name="busting_summary">Penalizes player for going over the score limit</string>
    <string name="busting">Busting</string>
    <string name="scoreLimit">Score Limit</string>
    <string name="bustWarning">Bust Warning!</string>
    <string name="bustScore">Bust Penalty: X</string>
</resources>
